@@ -1,12 +1,15 @@
 package yahoofinance.web;
 
 import lombok.extern.slf4j.Slf4j;
+import yahoofinance.exception.CookieException;
+import yahoofinance.exception.CrumbException;
 import yahoofinance.util.ConnectionUtils;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.time.LocalDateTime;
 import java.util.concurrent.locks.ReentrantLock;
@@ -24,7 +27,7 @@ public final class CrumbManager {
 		throw new AssertionError("CrumbManager should not be instantiated");
 	}
 
-	public static String getCrumb() throws IOException {
+	public static String getCrumb() throws CrumbException, CookieException {
 		if (crumb.isValid()) {
 			return crumb.getValue();
 		}
@@ -38,7 +41,7 @@ public final class CrumbManager {
 			fetchCrumb();
 
 			if (!crumb.isValid()) {
-				throw new IOException("Failed to initialize valid crumb");
+				throw new CrumbException("Failed to initialize valid crumb");
 			}
 
 			return crumb.getValue();
@@ -57,18 +60,23 @@ public final class CrumbManager {
 		}
 	}
 
-	private static void fetchCrumb() throws IOException {
+	private static void fetchCrumb() throws CrumbException, CookieException {
 		log.debug("Fetching crumb from Yahoo Finance");
 
 		try {
 			String cookie = CookieManager.getCookie();
 
-			URL url = new URL(CRUMB_URL);
+			URL url = URI.create(CRUMB_URL).toURL();
 			HttpURLConnection connection = ConnectionUtils.createBasicConnection(url, CONNECTION_TIMEOUT);
 			connection.setRequestProperty("Cookie", cookie);
 
 			int responseCode = connection.getResponseCode();
 			log.debug("Crumb request response code: {}", responseCode);
+
+			if (responseCode != HttpURLConnection.HTTP_OK) {
+				throw new CrumbException(
+						String.format("Failed to retrieve crumb: HTTP %d from %s", responseCode, CRUMB_URL));
+			}
 
 			try (InputStreamReader isr = new InputStreamReader(connection.getInputStream());
 			     BufferedReader reader = new BufferedReader(isr)) {
@@ -79,13 +87,15 @@ public final class CrumbManager {
 					crumb.setValue(crumbResult.trim(), LocalDateTime.now().plusDays(1));
 					log.debug("Successfully fetched crumb: {}", crumb);
 				} else {
-					throw new IOException("Empty crumb response from Yahoo Finance");
+					throw new CrumbException("Empty crumb response from Yahoo Finance");
 				}
 			}
 
 		} catch (IOException e) {
 			log.error("Failed to fetch crumb", e);
-			throw new IOException("Unable to retrieve Yahoo Finance crumb", e);
+			throw new CrumbException("Unable to retrieve Yahoo Finance crumb", e);
+		} catch (CookieException e) {
+			throw new CookieException("Unable to fetch cookie to fetch the crumb");
 		}
 	}
 }
